# Trinity

./: .env.example  .gitignore  Dockerfile  alembic.ini  alembic_local.ini  alembic_prod.ini  auth_twi.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run_tests.sh  runner.py  test_runner.py
.github/workflows/: ci.yml
alembic/: env.py
bot/: pyproject.toml  validate_pipelines.py
bot/src/: health.py  imghdr.py  notifications.py  pipeline_store.py
bot/src/maker/: __init__.py
bot/src/middleware/: watermark.py
bot/src/poster/: console_poster.py  telegram_poster.py
bot/tests/: conftest.py  test_retry.py
bot/tests/makers/: test_reddit.py  test_redgifs.py  test_string.py
common/models/: base.py  log_base.py  pipelines_infos.py
dashboard/: app.py  pyproject.toml
dashboard/static/: script.js  style.css
dashboard/templates/: index.html  pipeline_templates.json
docs/: README.md  VPS_SETUP.md
src/: app.py  config.py  logging_config.py  pipeline.py  pipeline_store.py  retry.py  test.py
src/maker/: __init__.py  red_gifs.token  reddit_maker.py  redgifs_maker.py  string_maker.py
src/middleware/: __init__.py  fake_delay.py
src/models/: base.py  history.py  pipelines_infos.py
src/poster/: __init__.py  console_poster.py  telegram_poster.py  twitter_post.py
tests/: conftest.py  test_config.py
website/: Dockerfile  app.py  requirements.txt
website/templates/: index.html  logs.html
worker/: .data.json.swp  Dockerfile  alembic_prod.ini
worker/alembic/: env.py
worker/src/: app.py  pipeline.py  pipeline_store.py
(+10 files in other folders)
