[project]
name = "trinity"
version = "0.1.0"
description = "Content automation pipeline - scrapes from Reddit/RedGifs and posts to Twitter/Telegram"
requires-python = ">=3.10"
dependencies = [
    "APScheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "cron_descriptor>=1.4.3",
    "dotenv>=0.9.9",
    "Flask>=3.0.3",
    "python-dotenv>=1.0.0",
    "redgifs>=2.4.0",
    "requests>=2.31.0",
    "tweepy>=4.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "coverage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501", "E402", "F403", "N813"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
